--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,28 @@
   "name": "JzfShrinkPic",
   "short_name": "JzfShrinkPic",
   "start_url": "./index.html",
+  "id": "/index.html",
+  "description": "A privacy-focused offline image compressor PWA.",
   "display": "standalone",
   "background_color": "#121212",
   "theme_color": "#121212",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     },
     {
-      "src": "icon.png",
+      "src": "icon.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "icon.svg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/svg+xml"
     }
   ]
 }
