--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "JzfShrinkPic",
   "short_name": "JzfShrinkPic",
-  "start_url": "./index.html",
-  "id": "/index.html",
+  "start_url": "/",
+  "id": "/",
   "description": "A privacy-focused offline image compressor PWA.",
   "display": "standalone",
   "background_color": "#121212",
