--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "JzfShrinkPic",
   "short_name": "JzfShrinkPic",
-  "start_url": "/",
-  "id": "/",
+  "start_url": "./",
+  "id": "./",
   "description": "A privacy-focused offline image compressor PWA.",
   "display": "standalone",
   "background_color": "#121212",
@@ -10,18 +10,18 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon.svg",
+      "src": "./icon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "icon.svg",
+      "src": "./icon.svg",
       "sizes": "192x192",
       "type": "image/svg+xml"
     },
     {
-      "src": "icon.svg",
+      "src": "./icon.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
     }
