--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest run",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
